make some modifications
